# bet

./: .gitignore  README.md  config.yaml  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: D1.csv  E1.csv  E2.csv  E3.csv  EC.csv  I1.csv  SC0.csv  SP1.csv
models/: catboost_model.pkl
predict/: single_predict.py
src/: feature_engineering.py  main.py  preprocess.py  train.py
