[tool.poetry]
name = "bet"
version = "0.1.0"
description = ""
authors = ["Aung Khant Phyo <itsakphyo@gmail.com>"]
packages = [{ include = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.2"
aiosignal = "1.3.1"
argcomplete = "3.5.1"
async-timeout = "5.0.1"
attrs = "24.2.0"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
frozenlist = "1.5.0"
idna = "3.10"
importlib-metadata = "8.5.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multidict = "6.1.0"
packaging = "24.1"
pexpect = "4.9.0"
pipx = "1.7.1"
pkginfo = "1.11.2"
platformdirs = "4.3.6"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
propcache = "0.2.0"
ptyprocess = "0.7.0"
pyenv-win = "3.1.1"
pyproject-hooks = "1.2.0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.10.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
tomli = "2.0.2"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
userpath = "1.9.2"
virtualenv = "20.27.1"
yarl = "1.17.1"
zipp = "3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
